--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 { 
-    "token"  : "ODAxODY1MTU5NDMzMTI1OTc4.YAm5Hw.hQD8O4T2O_DkXOklALWDoYAmyQ4",
+    "token"  : "",
     "ownerIdUser": "227433243748597760",
     "prefix" : "!",
     "help_time_loop":5000,
